# trikonasana

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
Source/: Application.c  Application.h  Cube.h  Display.c  Display.h  Main.c  Test.c  Vector.h
Source/Application/: Application.c  Application.h
Source/Graphics/: Consts.h  Display.c  Display.h  Draw.c  Draw.h  Mesh.c  Mesh.h  Triangle.h
Source/Math/: Vector.c  Vector.h
Source/Renderer/: Consts.h  Display.c  Display.h  Draw.c  Draw.h
Source/Trikonasana/: Application.c  Application.h  AssetLoader.c  AssetLoader.h  Color.c  Color.h  Consts.h  Display.c  Display.h  Draw.c  Draw.h  Light.c  Light.h  Mesh.c  Mesh.h  Render.c  Render.h  Typedef.h
Source/Trini/: Array.c  Array.h  Matrix.c  Matrix.h  Vector.c  Vector.h
Tests/: Tests.c
src/: main.c
